--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    namespace 'com.example.radio'
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.radio"
         minSdk 23
-        targetSdk 32
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
